framework/css/content-v1.css
/*----- TABLE -----*/
#col2-body table,
#col2-body tr,
#col2-body pre {
    width: calc(100% - 40px);
    padding: 0 10px;
    gap: 10px;
    margin-left: 10px;
    margin-right: 30px;
    line-height: 1.7;
}

#col2-body p>ul,
#col2-body p>ol {
    width: calc(100% - 40px);
    padding: 0 10px;
    margin-left: 20px;
    margin-right: 30px;
    line-height: 1.7;
}

#col2-body blockquote p {
    padding-top: 5px;
    padding-bottom: 5px;
}

/*----- BODY -----*/
#col1-head,
#col1-body,
#col2-head,
#col2-body,
#col3-head,
#col3-body {
    color: #000;
    background-color: #fff;
}

/*---- TABLES -----*/
table,
th,
tr,
td {
    border: 1px solid var(--grey);
    border-collapse: collapse;
    font-family: 'Roboto Slab', serif;
}

th {
    font-weight: 400;
    text-align: center;
    border: 1px solid var(--grey);
}

tr {
    border: 1px solid var(--grey);
    height: 30px;
}

td {
    text-align: left;
    border: 1px solid var(--grey);
    padding-left: 10px;
    font-weight: 300;
    vertical-align: middle;
}

/*----- HEADINGS -----*/
h1,
h2,
h3,
h4 {
    border-bottom: 1px solid var(--grey);
    margin-left: 10px;
    margin-right: 30px;
    font-family: 'Roboto Slab';
}

h2,
h3,
h4,
h5 {
    font-size: 20px;
    margin-left: 10px;
    margin-right: 30px;
    font-family: 'Roboto Slab';
}

h6 {
    border-bottom: 1px solid var(--grey);
    margin-bottom: -15px;
    padding-top: 10px;
    margin-top: 0;
    font-size: 16px;
    margin-left: 10px;
    margin-right: 30px;
    font-family: 'Roboto Slab';
}

/*----- LINKS -----*/
#col2-body a:any-link {
    text-decoration: none;
    color: #3366cc;
}

#col2-body a:hover {
    text-decoration: underline;
    text-underline-offset: 3px
}

/*----- EMP BOLD STRING -----*/
em {
    color: currentColor;
    font-style: italic
}

p.cursive {
    font-family: 'Zeyada' !;
    font-size: 60px;
    margin-top: -20px
}

kbd {
    border: 1px solid var(--grey);
    border-radius: 3px;
    padding: 3px;
    vertical-align: middle;
    white-space: nowrap;
    background-color: var(--light-grey) !important;
}

abbr {
    text-underline-offset: 2px;
}

pre {
    background-color: var(--light-grey);
    border: 1px solid var(--grey);
    border-collapse: collapse;
    font-family: 'Roboto Mono', monospace;
    max-width: 100%;
    padding: 10px;
    font-size: 14px;
}

.hidebtn,
.hidebtn2 {
    font-size: 16px;
    vertical-align: middle !
}

/*----- MATERIAL ICONS -----*/
span.material-symbols-outlined {
    vertical-align: middle;
}

/*----- PARAGRAPH -----*/
#col2-body p {
    margin-left: 10px;
    margin-right: 30px;
    font-size: 16px;
    font-family: 'Roboto Slab';
    font-weight: 300;
    line-height: 1.7;
}

/*----- IMAGE -----*/
#col2-body img {
    margin-left: 10px;
    margin-right: 30px;
}

/*----- IFRAME -----*/
#col2-body iframe {
    margin-left: 10px;
    width: calc(100% - 40px);
}

/*----- WIDTH -----*/
.col2-w {
    width: calc(100% - 20px)
}

/*----- BGROUND -----*/
.bg-lg {
    background-color: #eeeeee66;
}

.bg-dk {
    background-color: #333;
}

/*----- ALIGN ----*/
.va-b {
    vertical-align: middle !important;
}

/*----- BLOCKQUOTE -----*/
blockquote {
    background-color: aliceblue;
    border-left: 4px solid dodgerblue;
    margin-inline-end: 20px;
    margin-inline-start: 20px;
    padding: 5px 10px;
    margin-right: 40px;
}

#col2-body>blockquote p {
    margin-top: 0px;
    margin-bottom: 0px;
}

blockquote>p>a {
    background-color: transparent
}

/*----- BQUOTE SPIRIT ------*/
blockquote.spirit-multi>p:last-child {
    font-style: normal;
    font-weight: 400 !important;
    text-align: right;
    margin-right: 10px !important;
}

blockquote.spirit,
blockquote.spirit-multi {
    background-color: #F4FAFF;
    border-left: 4px solid dodgerblue
}

blockquote.spirit>p,
blockquote.spirit>p>a {
    background-color: transparent
}

/*----- BQUOTE BIBLE ----*/
blockquote.bible,
blockquote.bible-multi {
    background-color: #FCF4FC;
    border-left: 4px solid orchid
}

blockquote.bible-multi>p:last-child {
    font-style: normal;
    font-weight: 400 !important;
    text-align: right;
    margin-right: 10px !important;
}

/*----- BQUOTE ELEMENTS ----*/
blockquote>p>img {
    vertical-align: middle
}

#col2-body>blockquote.image {
    border: 1px solid var(--grey);
    padding: 10px;
    text-align: center;
    background-color: var(--light-grey);
    width: calc(100% - 60px);
}

#col2-body>blockquote.image p {
    font-size: 14px;
}

blockquote img {
    width: 100%;
}

blockquote em {
    color: crimson
}

blockquote.grey {
    background-color: var(--light-grey);
    border-color: solid var(--grey);
    border-left: 4px solid var(--grey)
}

blockquote.grey-center {
    background-color: var(--light-grey);
    border-color: solid var(--grey);
    border-left: 4px solid var(--grey);
    text-align: center;
}

blockquote.grey>p,
blockquote.grey>p>a {
    background-color: transparent
}

blockquote strong {
    font-weight: 300;
}

/*----- VIS -----*/
.d,
.t,
.c {
    display: none;
}

strong {
    font-weight: 400;
}

p.author {
    background-color: transparent;
    font-style: normal;
    font-weight: 400 !important;
    padding-right: 20px
}

#col1-body {
    background-color: inherit;
}

/*----- DARK MODE -----*/
.dark-mode blockquote.bible,
.dark-mode blockquote.bible-multi {
    background-color: #371C36 !important
}

.dark-mode blockquote.grey {
    background-color: #383838;
    border-color: solid var(--grey);
}

.dark-mode blockquote em {
    color: #F797AA
}

.dark-mode kbd {
    border: 1px solid var(--grey);
    border-radius: 3px;
    color: #fff !important;
    padding: 3px
}

.dark-mode table,
.dark-mode th,
.dark-mode tr,
.dark-mode td,
.dark-mode pre {
    background-color: #444
}


.dark-mode th {
    background-color: #333
}

.dark-mode blockquote.grey>p,
.dark-mode blockquote.grey>p>a {
    background-color: transparent !important
}

.dark-mode blockquote,
.dark-mode blockquote.spirit,
.dark-mode blockquote.spirit,
.dark-mode blockquote.spirit-multi {
    background-color: #082440
}

.dark-mode html,
.dark-mode body,
.dark-mode #col1-head,
.dark-mode #col1-body,
.dark-mode #col2-head,
.dark-mode #col2-body,
.dark-mode #col3-head,
.dark-mode #col3-body {
    background-color: #222 !important;
    color: #fff
}

.dark-mode #col2-body a {
    color: dodgerblue;
    text-decoration-color: dodgerblue;
}

